<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".Chat">

    <TextView
        android:id="@+id/main_text_myConnections2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableTop="@drawable/ic_my_connections_100"
        android:drawableTint="@color/colorPrimary"
        android:focusable="true"
        android:onClick="toMyConnections"
        android:text="@string/btn_myConnections"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_text_events2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_text_connect2" />

    <TextView
        android:id="@+id/main_text_connect2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableTop="@drawable/ic_connect_100"
        android:drawableTint="@color/black"
        android:focusable="true"
        android:text="@string/btn_connect"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_text_myConnections2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_text_events2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableTop="@drawable/ic_events_100"
        android:focusable="true"
        android:onClick="toEvents"
        android:text="@string/btn_events"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_text_myConnections2" />

    <ImageView
        android:id="@+id/main_image_logo2"
        android:layout_width="261dp"
        android:layout_height="120dp"
        android:clickable="true"
        android:contentDescription="@string/desc_logo"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_simple" />

    <TextView
        android:id="@+id/main_text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableTop="@drawable/ic_user"
        android:focusable="true"
        android:onClick="toSettings"
        android:text="@string/btn_settings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_chat"
        android:layout_width="219dp"
        android:layout_height="37dp"
        android:layout_marginTop="128dp"
        android:text="@string/title_chat"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="368dp"
        android:layout_height="198dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/back"
        android:shrinkColumns="0"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_chat">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/promptText"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:text="@string/ins_chat"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="55dp"
                android:layout_height="54dp"
                android:contentDescription="@string/desc_profile_img" />
        </TableRow>

        <TableRow
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:background="@drawable/back">

            <TextView
                android:id="@+id/prompt1"
                android:layout_width="374dp"
                android:layout_height="45dp"
                android:background="@drawable/back"
                android:onClick="fillOne"
                android:text="@string/prompt_question1" />

            <TextView
                android:id="@+id/q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_q1"
                android:textAlignment="center"
                android:textAllCaps="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back">

            <TextView
                android:id="@+id/prompt2"
                android:layout_width="352dp"
                android:layout_height="45dp"
                android:background="@drawable/back"
                android:onClick="fillTwo"
                android:text="@string/prompt_question2" />

            <TextView
                android:id="@+id/q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_q2"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back">

            <TextView
                android:id="@+id/prompt3"
                android:layout_width="276dp"
                android:layout_height="45dp"
                android:background="@drawable/back"
                android:onClick="fillThree"
                android:text="@string/prompt_question3" />

            <TextView
                android:id="@+id/q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_q3"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/ins_enterMsg"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/rounded_corners_btn"
        android:backgroundTint="@color/colorAccentTeal"
        android:onClick="onSendMessage"
        android:text="@string/btn_sendMsg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/rounded_corners_btn"
        android:backgroundTint="@color/colorAccent"
        android:onClick="onBackClick"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>