<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".SettingsMenu">

    <TextView
        android:id="@+id/settings_text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableTop="@drawable/ic_settings_black_24dp"
        android:focusable="true"
        android:onClick="toPreviousActivity"
        android:text="@string/btn_settings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settings_image_logo"
        android:layout_width="261dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_simple"
        android:onClick="toConnect"/>

    <TextView
        android:id="@+id/settings_text_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prefs_preferences"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_image_logo" />

    <TextView
        android:id="@+id/settings_text_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/prefs_notifications"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/settings_text_preferences"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_preferences" />

    <Switch
        android:id="@+id/settings_switch_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showText="true"
        android:checked="true"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/settings_text_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_text_notifications"
        android:onClick="toggleNotifications"/>

    <TextView
        android:id="@+id/settings_text_ageRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/prefs_ageRange"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/settings_text_preferences"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_notifications" />

    <TextView
        android:id="@+id/settings_text_ageRangeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prefs_ageRangeTo"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings_text_ageRange"
        app:layout_constraintEnd_toStartOf="@+id/settings_edit_maxAge" />

    <TextView
        android:id="@+id/settings_text_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/prefs_theme"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/settings_text_preferences"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_ageRange" />

    <EditText
        android:id="@+id/settings_edit_minAge"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ageRangeMin"
        android:maxLength="3"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings_text_ageRangeTo"
        app:layout_constraintEnd_toStartOf="@+id/settings_text_ageRangeTo" />

    <EditText
        android:id="@+id/settings_edit_maxAge"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ageRangeMax"
        android:maxLength="3"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings_text_ageRangeTo"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/settings_chipGroup_themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/settings_text_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_text_theme"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/settings_chip_theme1"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefs_theme1"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:chipBackgroundColor="@drawable/chip_theme_selection"
            app:chipStrokeColor="@color/colorPrimaryDark"
            app:chipStrokeWidth="1dp"
            android:checked="true"
            android:onClick="themeToSimple"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/settings_chip_theme2"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefs_theme2"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:chipBackgroundColor="@drawable/chip_theme_selection"
            app:chipStrokeColor="@color/colorPrimaryDark"
            app:chipStrokeWidth="1dp"
            android:onClick="themeToColor"/>
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/settings_text_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/prof_profile"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_theme" />

    <TextView
        android:id="@+id/settings_text_activeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/prefs_activeStatus"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/settings_text_preferences"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_profile" />

    <Switch
        android:id="@+id/settings_switch_activeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showText="true"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/settings_text_activeStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_text_activeStatus"
        android:onClick="toggleProfileStatus"
        android:checked="true"/>

    <Button
        android:id="@+id/settings_button_viewEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="toViewEditProfile"
        android:text="@string/btn_viewEdit"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_activeStatus" />

    <Button
        android:id="@+id/settings_button_about"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:onClick="toAbout"
        android:text="@string/btn_tellMe"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button_viewEditProfile" />

    <Button
        android:id="@+id/settings_button_delAccount"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/design_default_color_error"
        android:onClick="deleteAccount"
        android:text="@string/btn_delAcc"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button_about" />

</androidx.constraintlayout.widget.ConstraintLayout>